# gl_pbr_training

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
shaders/: base.vert  passthrough.vert  pbr_deferred_pass.frag  pbr_prepass_untextured.frag
shaders/core/: base.vert  common.glsl  pbr.glsl  pbr_deferred_pass.frag  pbr_prepass_untextured.frag
shaders/core/Deferred/: pass.frag
shaders/core/PBR/: untextured.frag
shaders/core/Specific/: skybox.frag  skybox.vert
shaders/core/common/: common.glsl  pbr.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Model.cpp  Model.h  RenderGraph.cpp  RenderGraph.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  tiny_obj_loader.h
src/Passes/: CMakeLists.txt  PBRDeferredPass.cpp  PBRDeferredPass.h  PBRPrePass.cpp  PBRPrePass.h
